(refactor) Use Java version independent adapter for internal API